test/spec_vectors/if/fail/module_86.wat
(module (func $type-condition-empty-in-return (return (if (then))) (drop)))